standards/gnds-2.0-alpha/alpha/c/src/v2.0/tsl/ThermalNeutronScatteringLaw_incoherentInelastic.h

// --- Const-aware handles.
typedef const struct ThermalNeutronScatteringLaw_incoherentInelasticClass *const ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic;
typedef       struct ThermalNeutronScatteringLaw_incoherentInelasticClass *const ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic;
// -----------------------------------------------------------------------------
// Metadatum: calculatedAtThermal
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get
// +++ Returns by value
extern_c bool
ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalGet(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const bool calculatedAtThermal);
// -----------------------------------------------------------------------------
// Child: scatteringAtoms
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// --- Get, const
extern_c Handle2ConstScatteringAtoms
ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGetConst(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get, non-const
extern_c Handle2ScatteringAtoms
ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, ConstHandle2ConstScatteringAtoms scatteringAtoms);