versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/ThermalNeutronScatteringLaw_incoherentInelastic.f03


!! -----------------------------------------------------------------------------
!! Metadatum: calculatedAtThermal
!! -----------------------------------------------------------------------------

!! Has
function ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalHas(handle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalHas

!! Get
function ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalGet(handle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalGet') &
      result(calculatedAtThermal)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   logical(c_bool) :: calculatedAtThermal
end function ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalGet

!! Set
subroutine ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalSet(handle, calculatedAtThermal, calculatedAtThermalSize) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: calculatedAtThermalSize
   character(c_char), intent(in) :: calculatedAtThermal(calculatedAtThermalSize)
end subroutine ThermalNeutronScatteringLaw_incoherentInelasticCalculatedAtThermalSet


!! -----------------------------------------------------------------------------
!! Child: scatteringAtoms
!! -----------------------------------------------------------------------------

!! Has
function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsHas(handle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsHas

!! Get, const
function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGetConst(handle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGetConst

!! Get
function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGet(handle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsGet

!! Set
subroutine ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsSet(handle, fieldHandle) &
      bind(C, name='ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ThermalNeutronScatteringLaw_incoherentInelasticScatteringAtomsSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalThermalNeutronScatteringLaw_incoherentInelastic
